--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,31 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyCQYmNjsFM2etQc29MA2GKQqOrSqgIQ6-M",
+        authDomain: "weatherjet.firebaseapp.com",
+        projectId: "weatherjet",
+        storageBucket: "weatherjet.appspot.com",
+        messagingSenderId: "113768638614",
+        appId: "1:113768638614:web:e535d7890c1355e547fab7",
+        measurementId: "G-FB1J64G91V"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      if ("%NODE_ENV%" == 'production') {
+        firebase.analytics();
+      }
+    </script>
   </body>
 </html>
