google site verification

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A way to get information about the weather" />
     <meta name="author" content="Sam Girshovich" />
+    <meta name="google-site-verification" content="FNLnHXWvMb1Fu2DY2NCvpZUyfCmVHPgo31EwAoO7cGw" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
