--- a/maintainence/index.html
+++ b/maintainence/index.html
@@ -6,6 +6,6 @@
     <title>Maintenence</title>
 </head>
 <body>
-    <h1>Sorry, weatherjet is currently under maintenance, try again later.</h1>
+    <h1>Sorry, weatherjet is currently under maintainence, try again later.</h1>
 </body>
 </html>
