--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script data-ad-client="ca-pub-4654255073790356" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Weatherjet</title>
   </head>
   <body>
