--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,17 @@
     <link rel="icon" href="%PUBLIC_URL%/logo512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A way to get information about the weather" />
-    <meta name="author" content="Sam Girshovich" />
+
+    <meta name="title" content="Weatherjet">
+    <meta name="description" content="Weatherjet is an open source weather app for easily accessing data for the United States. It is easy to use and very minimalistic.">
+    <meta name="keywords" content="weather, forecast, temperature, weatherjet, ">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta name="author" content="Sam Girshovich">
+
+
     <meta name="google-site-verification" content="FNLnHXWvMb1Fu2DY2NCvpZUyfCmVHPgo31EwAoO7cGw" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
