--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
 
     <meta name="title" content="Weatherjet">
-    <meta name="description" content="Weatherjet is an open source weather app for easily accessing data for the United States. It is easy to use and very minimalistic.">
+    <meta name="description" content="Weatherjet is an open source weather app for easily accessing weather data for the United States. It is easy to use and very minimalistic.">
     <meta name="keywords" content="weather, forecast, temperature, weatherjet, ">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
